--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container main-nav flex">
             <a href="#" class="company-logo"><img src="./assets/asset 1.png" alt="company logo"></a>
 
-            <div class="nav-links" id="nav-links>
+            <div class="nav-links" id="nav-links">
                 <ul class="flex">
                     <li><a href="" class="hover-links">Products</a></li>
                     <li><a href="" class="hover-links">Customer
