--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Pro</title>
+    <title>Usability Hub</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./media-query.css">
 </head>
